--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,2 +1,18 @@
-<h1>Users#show</h1>
-<p>Find me in app/views/users/show.html.erb</p>
+<div id="user_profile">
+	<div id="profile_heading">
+		<h1><%= @user.blog_title %></h1>
+		<h3><i>Blog.</i> by <%= @user.name %></h3>
+	</div>
+
+	<div id="profile_article">
+		<div id="profile_new_post_button">
+			<%= link_to "New Post", new_post_path %>
+		</div>
+		<!-- display each post (without the body) -->
+	</div>
+
+
+<%= link_to "Log out", session_path, method: :delete %>
+
+	
+</div>
