--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,2 +1,26 @@
-<h1>Posts#index</h1>
-<p>Find me in app/views/posts/index.html.erb</p>
+<div id="posts_index">
+	<div id="posts_index_heading">
+		<h1>Explore Our Featured Posts</h1>
+		<h4>Curated by the <i>Blog.</i> team</h4>
+	</div>
+
+	<div id="posts_index_article">
+		<% @posts.each do |post| %>
+			<div id="post_box_index">
+				<h3><%= post.title %></h3>
+				<h5>Published by: <%= link_to post.user.name, user_path(post.user) %></h5>
+				<p><%= post.desc %></p>
+				<p>
+					This post has
+						<% if post.comments.count > 0 %> 
+							<%= post.comments.count %> comments
+						<% else %>
+							no comments yet
+						<% end %>
+				</p>
+				<%= link_to "Read more...", post_path(post) %>
+			</div>
+		<% end %>
+	</div>
+
+</div>
