creating actions for create and destroy comments in post/show.html.erb

--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,7 +1,7 @@
 <div id="post_show">
 	<div id="post_title">
 		<h1><%= @current_post.title %></h1>
-		<h4>Published by <%= link_to @current_post.user.name %></h4>
+		<h4>Published by <%= link_to @current_post.user.name, user_path(@current_post.user) %></h4>
 		<% if @current_post.user_id == current_user.id %>
 			<%= button_to "Delete post", post_path(@current_post), method: :delete %>
 		<% end %>
@@ -21,10 +21,21 @@
 
 	<div id="post_comments">
 		<div id="post_new_comment">
-			
+			<%= form_for [@current_post, @comment] do |f| %>
+				<%= f.text_field :body, placeholder: "Write your comment" %>
+				<%= f.hidden_field :post_id, value: @current_post.id %>
+				<%= f.submit value: "Submit" %>
+			<% end %>
+			<%= flash[:alert] if flash[:alert] %>
 		</div>
 		<div id="post_comments_show">
-			
+			<% @comments.each do |comment| %>
+				<% if comment.user == current_user %>
+					<p><%= link_to "X", post_comment_path(@current_post, comment), method: :delete %></p>
+				<% end %>
+				<p><%= link_to comment.user.name, user_path(comment.user) %>: </p>
+				<p><%= comment.body %></p>
+			<% end %>
 		</div>
 	</div>
 
