--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -19,3 +19,65 @@ body {
 	font-family: 'Lato', sans-serif;
 }
 
+/*root page*/
+
+#landing {
+	height: 700px;
+}
+
+#landing_heading {
+	width: 50%;
+	height: 100%;
+	background: #36465D;
+	color: #36465D;
+	float: left;
+}
+
+#landing_heading h1 {
+	font-size: 11em;
+	margin: 0;
+	text-align: right;
+	padding: 35% 0;
+}
+
+#landing_heading h1 i {
+	background: white;
+	padding-left: 25px;
+	padding-bottom: 10px;
+}
+
+#landing_article {
+	float: right;
+	width: 50%;
+	text-align: center;
+
+}
+
+#landing_buttons {
+	background: #36465D;
+	width: 398px;
+	height: 209px;
+	margin: 35% 0;
+	padding-top: 12px;
+}
+
+#landing_buttons .landing_button {
+	width: 250px;
+	height: 60px;
+	background: white;
+	margin: 18px auto;
+}
+
+#landing_buttons .landing_button p {
+	padding-top: 11px;
+}
+
+#landing_buttons a {
+	color: #36465D;
+	text-decoration: none;
+	font-size: 1.7em;
+}
+
+#landing_buttons .landing_button:hover {
+	background: #56BC8A;
+}
