--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -13,7 +13,7 @@
 			<%= f.text_field :name,  placeholder: "Your name" %>
 			<%= f.email_field :email, placeholder: "Email" %>
 			<%= f.password_field :password, placeholder: "Password" %>
-			<%= f.submit value: "Sign Up" %>
+			<%= f.submit value: "Sign Up", id: "signup_submit" %>
 		<% end %>
 		<%= flash[:alert] if flash[:alert] %>
 	</div>
