styling for the show post page and the new post page

--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -1,17 +1,19 @@
 <div id="new-post">
 
-	<div id="new_post_heading">
+	<div id="new-post_heading">
 		<h1>Create a new <i>Blog.</i> post</h1>
 	</div>
 
-	<div id="new_post_article">
+	<div id="new-post_article">
 		<%= form_for(@post) do |f| %>
 			<%= f.text_field :title, placeholder: "Post title" %>
 			<%= f.text_field :desc,  placeholder: "Short description" %>
 			<%= f.text_area :body, placeholder: "Write your post here" %>
-			<%= f.submit value: "Publish" %>
+			<%= f.submit value: "Publish", id: "new-post_button" %>
 		<% end %>
 		<%= flash[:alert] if flash[:alert] %>
 	</div>
 
 </div>
+
+
