--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -384,5 +384,189 @@ nav ul li i {
 	color: #56BC8A;
 }
 
+/*==========================================================*/
+
+/*show post page*/
+
+#post_show {
+	width: 60%;
+	margin: 15px auto;
+}
+
+#post_title {
+	width: 95%;
+	margin: 30px auto;
+	background: #36465D;
+	color: white;
+	padding: 1px 0;
+}
+
+#post_title h1 {
+	margin: 8px;
+}
+
+#post_title h5 {
+	margin: 0 8px;
+	padding-bottom: 8px;
+	display: inline-block;
+}
+
+#post_title a {
+	color: #56BC8A;
+}
+
+#post_title input {
+	float: right;
+	color: white;
+	background: #56BC8A;
+	border: none;
+	margin-top: 1px;
+}
+
+#post_title input:focus {
+	outline: none;
+}
+
+#post_body {
+	width: 95%;
+	margin: 30px auto;
+	background: #36465D;
+	color: white;
+	padding: 1px 0;
+}
+
+#post_body p {
+	margin: 8px;
+}
+
+#post_img {
+	text-align: center;
+	width: 650px;
+	margin: 0 auto;
+	padding: 9px 0;
+	background: #56BC8A;
+}
+
+#post_img img {
+	margin-top: 4px;
+}
+
+#post_body p i {
+	font-size: 1.2em;
+}
+
+#post_new_comment form {
+	margin: 8px;
+}
+
+#post_new_comment input {
+	width: 84%;
+	font-size: 1.1em;
+}
+
+#post_new_comment input:focus {
+	border: 2px solid #56BC8A;
+	outline: none;
+}
+
+#post_new_comment #submit_comment {
+	width: 14%;
+	margin-top: 1px; 
+	background: #56BC8A;
+	color: white;
+	border: none;
+	margin-left: 5px;
+}
+
+#post_comments_show {
+	width: 95%;
+	margin: 30px auto;
+	background: #36465D;
+	color: white;
+	padding: 3px 0;
+}
+
+#post_comment_box {
+	margin: 10px 8px;
+	padding-top: 8px;
+	border-top: 1px solid white;
+}
+
+#delete_button {
+	float: right;
+}
+
+#post_comments_show a {
+	color: #56BC8A;
+}
 
 /*==========================================================*/
+
+/*create new post page */
+
+#new-post {
+	width: 50%;
+	height: 685px;
+	margin: 4% auto;
+	background: #36465D;
+	color: white;
+	text-align: center;
+}
+
+#new-post_heading h1{
+	padding-top: 15px;
+	font-size: 3em;
+	margin: 0;
+}
+
+#new-post_article .new_post {
+	width: 75%;
+	margin: 0 auto;
+}
+
+#new-post_article {
+	margin-top: 30px;
+}
+
+#new-post_article input, textarea {
+	display: block;
+	margin: 15px auto;
+	width: 100%;
+	font-size: 1.2em;
+	background: white;
+}
+
+#new-post_article input:focus, textarea:focus{
+	border: 2px solid #56BC8A;
+	outline: none;
+}
+
+#new-post_article textarea {
+	width: 100%;
+	height: 400px;
+	padding-right: 5px;
+	background: white;
+	margin-top: 17px;
+	margin-bottom: 16px;
+}
+
+#new-post_article #post_desc {
+	height: 50px;
+}
+
+#new-post_article #new-post_button {
+	width: 120px;
+	margin: 5px auto;
+	background: #56BC8A;
+	color: white;
+	border: none;
+}
+/*==========================================================*/
+
+
+
+
+
+
+
+
